<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_login"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="50"
        android:title="@string/action_login"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/translation"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always">


        <menu>


            <item
                android:id="@+id/local_french"
                android:icon="@drawable/france"
                android:title="@string/text_french" />


            <item
                android:id="@+id/local_arabic"
                android:icon="@drawable/ar"
                android:title="@string/text_arabi" />

            <item
                android:id="@+id/local_bangla"
                android:icon="@drawable/bangladesh"
                android:title="@string/text_bangla" />

            <item
                android:id="@+id/local_spanish"
                android:icon="@drawable/spain"
                android:title="@string/text_spanish" />
            <item
                android:id="@+id/local_English"
                android:icon="@drawable/us"
                android:title="@string/text_english" />
        </menu>
    </item>
</menu>
